# g2client

./: .gitignore  LICENSE.md  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
g2client/: ana.py  datasink.py  g2disp.py  g2disp_gui.py  g2disp_server.py  soundsink.py  version.py
g2client/util/: Recorder.py
scripts/: datasink  g2disp  g2disp_gui  g2disp_server  gen2_play  sound_play  soundsink
