[metadata]
name = g2client
description = A client for observing with the Subaru Telescope Observation Control System.
long_description = file: README.md
long_description_content_type = text/markdown
author = Software Division, Subaru Telescope, NAOJ
author_email = ocs@naoj.org
license = BSD
license_files = LICENSE.md
url = https://github.com/naojsoft/g2client
edit_on_github = False
github_project = naojsoft/g2client
keywords = subaru, telescope, observation, client
 
[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools_scm
include_package_data = True
scripts =
    scripts/soundsink
    scripts/g2disp
    scripts/g2disp_gui

[options.package_data]
g2client = icons/*.png
